# trytet

./: .dockerignore  .gitignore  .mutants.toml  API.md  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CLI.md  CODE_HEALTH.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  FUZZING.md  LICENSE  Makefile  README.md  SECURITY.md  VISION.md  benchmarks.html  extract.py  fly.toml  install.sh  mc_sim_v2.py  patch.py  refactor_apply.py  refactor_cli.py  refactor_hive_command.py  refactor_script.py  tet.toml
.claude/prompts/: goal.txt  loop.txt  ralph-feature-realization.md
.claude/workflows/: phase1-hygiene.js  phase2-code-quality.js  phase3-testing.js  phase4-cicd.js  phase5-docs.js  phase6-final-red-team.js
.github/workflows/: ci.yml  deploy.yml  release.yml
.wrangler/cache/: pages.json  wrangler-account.json
benches/: engine_benches.rs
crates/jmespath-cartridge/: Cargo.toml
crates/jmespath-cartridge/src/: lib.rs
crates/js-evaluator/: Cargo.toml
crates/js-evaluator/src/: lib.rs
crates/json-schema-cartridge/: Cargo.toml
crates/json-schema-cartridge/src/: lib.rs
crates/lean-cartridge/: Cargo.toml
crates/mcts-guest/: Cargo.toml
crates/mcts-guest/src/: main.rs
crates/python-evaluator/: Cargo.toml
crates/python-evaluator/src/: lib.rs
crates/regex-evaluator/: Cargo.toml
crates/regex-evaluator/src/: lib.rs
crates/replay-debugger/: Cargo.toml
crates/research-agent/: Cargo.toml
crates/research-agent/src/: main.rs
crates/sat-cartridge/: Cargo.toml
crates/sat-cartridge/src/: lib.rs
crates/scraper-cartridge/: Cargo.toml
crates/scraper-cartridge/src/: lib.rs
crates/sql-cartridge/: Cargo.toml
crates/sql-cartridge/src/: lib.rs
crates/tet-web/: Cargo.toml
crates/tet-web/src/: lib.rs
crates/trytet-guest/: Cargo.toml
crates/trytet-guest/examples/: hello.rs  solver.rs
crates/trytet-guest/src/: lib.rs
demos/: README.md  counter.wasm  counter.wat  docker_baseline.sh  mcp-walkthrough.sh  snapshot-fork.sh
demos/neuro_symbolic/: README.md  logic_bomb.wat  z3_stub.wat
demos/swarm_demo/: demo.toml  run_demo.sh
docs/: VERIFY.md  index.html
examples/: compile_wat.rs  regex_data_agent.rs  swarm_mcts.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuel_voucher.rs  wasm_parse.rs
landing-page/: how-to.html  index.html  styles.css  theme.js
landing-page/.well-known/mcp/: server.json
notes/: PROMPTS.md  RED_TEAM.md  RED_TEAM_SHIP.md  SPRINT.md  SPRINT_SHIP.md
playground/: next.config.js  package-lock.json  package.json  wrangler.toml
playground/public/: fibonacci.wasm  infinite-loop.wasm  js-evaluator.wasm  mcts-guest.wasm
playground/scripts/: compile-wasm.js
playground/src/app/: globals.css  layout.tsx  page.tsx
playground/src/app/architecture/: page.tsx
playground/src/app/benchmark/: page.tsx
playground/src/app/how-to/: page.tsx
playground/src/components/: FuelGauge.tsx  LedgerTerm.tsx  Navbar.tsx  OnboardingModal.tsx  PulseMap.tsx
playground/src/hooks/: useTetEngine.ts
playground/src/providers/: SwarmProvider.tsx
playground/src/workers/: tet-engine.ts
playground/tests/: phase24.test.tsx  phase25_resurrection.test.ts
sdk/python/: README.md  pyproject.toml
sdk/python/trytet_client/: __init__.py  client.py  models.py  telemetry.py
sdk/typescript/: README.md  package-lock.json  package.json
sdk/typescript/src/: index.ts
src/: api.rs  auth.rs  benchmarks.rs  builder.rs  cartridge.rs  config.rs  consensus.rs  crypto.rs  economy.rs  engine.rs  fork.rs  fortress.rs  gateway.rs  hive.rs  inference.rs  lib.rs  llama_engine.rs  main.rs  market.rs  memory.rs  mesh.rs  mesh_worker.rs  model_proxy.rs  models.rs  oracle.rs  registry.rs  resurrection.rs  sandbox.rs  shards.rs  studio.rs  telemetry.rs  teleport.rs
src/api/: console.rs
src/api/context/: estimator.rs  mod.rs  models.rs  router.rs
src/api/handlers/: all.rs
src/economy/: bridge.rs  registry.rs
src/hive/: connection.rs  dht.rs  link.rs  security.rs
src/mcp/: mod.rs  protocol.rs  server.rs
src/models/: manifest.rs
src/network/: mod.rs  tunnel.rs  vitality.rs
src/registry/: cache.rs  identity.rs  mod.rs  oci.rs  quorum.rs  sovereign.rs
src/runtime/: factory.rs  mod.rs  recovery.rs
src/sandbox/: host_api.rs  sandbox_polyfill.rs  sandbox_wasmtime.rs  security.rs
src/sandbox/host_api/: cartridge_invoke.rs  economy_bill.rs  economy_pay.rs  economy_withdraw.rs  equilibrium.rs  fetch.rs  fork.rs  gateway_listen.rs  helpers.rs  inter_agent_invoke.rs  memory_ops.rs  migration.rs  mod.rs  model_ops.rs  predict.rs  reclaim.rs  suspend.rs
src/server/: health.rs  mod.rs  purge.rs  start.rs
tests/: api_tests.rs  cli_tests.rs  context_router_tests.rs  demo_neuro_symbolic.rs  engine_tests.rs  hive_security_tests.rs  interpreter_tests.rs  mesh_tests.rs  phase12_redemption.rs  phase14_1_builder_tests.rs  phase14_2_resurrection_tests.rs  phase14_3_registry_tests.rs  phase14_4_teleportation_tests.rs  phase14_5_mtls_tests.rs  phase14_5_registry_handoff_tests.rs  phase15_1_oracle_tests.rs  phase15_2_model_proxy_tests.rs  phase16_1_telemetry_tests.rs  phase17_1_fortress_tests.rs  phase18_1_gateway_tests.rs  phase19_1_auto_scaling_tests.rs  phase20_1_cow_vfs_tests.rs  phase21_1_consensus_tests.rs  phase22_1_economy_tests.rs  phase23_1_bridge_tests.rs  phase23_browser_handoff.rs  phase24_1_factory_tests.rs  phase25_1_equilibrium_tests.rs  phase26_1_northstar_tests.rs  phase26_migration_sanity.rs  phase27_1_control_plane_tests.rs  phase28_1_sovereign_registry_tests.rs  phase29_1_mesh_vpn_tests.rs  phase30_1_resurrection_tests.rs  phase31_1_prison_break_tests.rs  phase33_1_cartridge_tests.rs  phase34_1_js_evaluator_tests.rs  phase34_2_python_evaluator_tests.rs  phase35_1_idle_eviction_tests.rs  phase35_2_red_team_tests.rs  (+15 more)
tests/fixtures/: async_test.rs  counter_agent.wat  fuel_test.rs  func_wrap_test.rs  lazarus.rs  lazarus.wasm  mesh_caller.rs  mesh_caller.wasm  mesh_receiver.rs  mesh_receiver.wasm  mock_interpreter.rs  mock_interpreter.wasm  python_mock.rs  python_mock.wasm  straightjacket.rs  straightjacket.wasm
wit/: cartridge.wit
(+5 files in other folders)
