[package]
name = "tet-core"
version = "0.1.0"
edition = "2021"
description = "Sub-millisecond, hyper-ephemeral Wasm execution substrate for Agentic AI"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
wasmtime = "43"
wasmtime-wasi = "43"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tempfile = "3.27.0"
tar = "0.4.45"
clap = { version = "4.6.0", features = ["derive"] }
indicatif = "0.18.4"
colored = "3.1.1"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
sha2 = "0.11.0"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
rand = "0.10.0"
home = "0.5.12"
hex = "0.4.3"
bincode = "1.3.3"
signature = { version = "2.2.0", features = ["std"] }
rand_core = { version = "0.6", features = ["getrandom"] }
instant-distance = "0.6.1"
llama-cpp-2 = { version = "0.1.140", features = ["metal"] }
futures-util = "0.3.30"
dashmap = { version = "6.1", features = ["serde"] }
toml = "1.1.2"
ratatui = "0.30.0"
crossterm = "0.29.0"
ahash = "0.8.11"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
wat = "1"
criterion = { version = "0.5", features = ["async_tokio"] }
tokio-test = "0.4"

[[bench]]
name = "engine_benches"
harness = false
