[package]
name = "tet-core"
version = "0.1.0"
edition = "2021"
description = "Sub-millisecond, hyper-ephemeral Wasm execution substrate for Agentic AI"

[dependencies]
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "js", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
sha2 = "0.11.0"
hex = "0.4.3"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
bincode = "1.3.3"
dashmap = { version = "6.1.0", features = ["serde"] }
ahash = "0.8.11"
instant-distance = "0.6.1"
tokio = { version = "1", features = ["sync", "macros", "time", "rt"] }
zstd = "0.13.3"
rustls = "0.22"
tokio-rustls = "0.25"
rustls-pemfile = "2.1"
pki-types = { package = "rustls-pki-types", version = "1.3" }
rcgen = "0.12.1"
snow = "0.9.6"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
wasmtime = "43"
wasmtime-wasi = "43"
toml = "0.8.19"
tempfile = "3.27.0"
tar = "0.4.45"
clap = { version = "4.6.0", features = ["derive"] }
indicatif = "0.18.4"
colored = "3.1.1"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
rand = "0.10.0"
home = "0.5.12"
signature = { version = "2.2.0", features = ["std"] }
rand_core = { version = "0.6", features = ["getrandom"] }
llama-cpp-2 = { version = "0.1.140", features = ["metal"] }
futures-util = "0.3.30"
ratatui = "0.30.0"
crossterm = "0.29.0"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
wat = "1.0"
criterion = { version = "0.5", features = ["async_tokio"] }
tokio-test = "0.4"
rand = "0.8"

[[bench]]
name = "engine_benches"
harness = false
