[package]
name = "tet-core"
version = "0.2.0"
edition = "2021"
description = "Wasm sandbox runtime for AI agent code execution — deterministic traps, fuel-bounded, MCP-native"
license = "MIT"
repository = "https://github.com/bneb/trytet"
homepage = "https://github.com/bneb/trytet"
documentation = "https://github.com/bneb/trytet"
keywords = ["wasm", "sandbox", "wasmtime", "ai", "mcp", "code-execution"]
categories = ["development-tools", "web-programming"]
rust-version = "1.80"
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "js", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
sha2 = "0.11.0"
hex = "0.4.3"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
bincode = "1.3.3"
dashmap = { version = "6.1.0", features = ["serde"] }
ahash = "0.8.11"
instant-distance = "0.6.1"
tokio = { version = "1", features = ["sync", "macros", "time", "rt", "fs"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
zstd = "0.13.3"
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
wasmtime = { version = "43", features = ["component-model"] }
wasmtime-wasi = { version = "43" }
toml = "0.8.19"
tempfile = "3.27.0"
tar = "0.4.45"
clap = { version = "4.6.0", features = ["derive"] }
indicatif = "0.18.4"
colored = "3.1.1"
reqwest = { version = "0.13.2", features = ["json", "stream", "blocking"] }
rand = "0.10.0"
home = "0.5.12"
signature = { version = "2.2.0", features = ["std"] }
rand_core = { version = "0.6", features = ["getrandom"] }
llama-cpp-2 = { version = "0.1.140", features = ["metal"] }
futures-util = "0.3.30"
ratatui = "0.30.0"
crossterm = "0.29.0"
tower-http = { version = "0.6", features = ["cors"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls-pemfile = "2.1"
pki-types = { package = "rustls-pki-types", version = "1" }
rcgen = "0.12.1"
snow = "0.9.6"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
wat = "1.0"
criterion = { version = "0.5", features = ["async_tokio"] }
tokio-test = "0.4"
rand = "0.10"
walkdir = "2.4"

[workspace]
members = [
    ".",
    "crates/js-evaluator",
    "crates/python-evaluator",
    "crates/regex-evaluator",
    "crates/jmespath-cartridge",
    "crates/scraper-cartridge",
    "crates/sql-cartridge",
    "crates/json-schema-cartridge",
    "crates/sat-cartridge",
]
default-members = ["."]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }

[profile.release]
opt-level = "s"

# Distribution profile: LTO + strip for release binaries (slower build, smaller output)
[profile.dist]
inherits = "release"
lto = true
strip = true

[[bench]]
name = "engine_benches"
harness = false
