[workspace]

[package]
name = "tet-core-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"
wasmtime = { version = "43", features = ["component-model"] }

[dependencies.tet-core]
path = ".."

[[bin]]
name = "wasm_parse"
path = "fuzz_targets/wasm_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuel_voucher"
path = "fuzz_targets/fuel_voucher.rs"
test = false
doc = false
bench = false
