[package]
name = "jmespath-cartridge"
version = "0.2.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["rlib"]

[target.wasm32-wasip2.lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
jmespath = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = "0.24.0"
