[package]
name = "tet-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tet-core = { path = "../../" }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
anyhow = "1"
console_error_panic_hook = "0.1.7"
wasm-bindgen-futures = "0.4.67"
