[package]
name = "tet-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
bincode = "1.3.3"
js-sys = "0.3"
tet-core = { path = "../.." }
console_error_panic_hook = "0.1.7"
wasm-bindgen-futures = "0.4.50"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]
