[package]
name = "trytet-guest"
version = "0.1.0"
edition = "2021"
description = "Guest SDK for building Trytet agents and cartridges"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"     # Size-optimized for Wasm
lto = true
strip = true
