[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trytet-client"
version = "0.2.0"
description = "Official Python SDK for the Trytet Engine — sub-millisecond Wasm sandbox for AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Trytet"}]
keywords = ["trytet", "wasm", "agent", "llm", "sandbox"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.25",
    "websockets>=12.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]

[tool.hatch.build.targets.wheel]
packages = ["trytet_client"]
